--- a/front_end/index.html
+++ b/front_end/index.html
@@ -356,6 +356,7 @@
       <div class="action-buttons">
         <button id="new-game-btn">New Game</button>
         <button id="lichess-analysis-btn">Open Analysis Board</button>
+        <button id="player-color">Playing as White</button>
       </div>
     </div>
 
@@ -376,13 +377,6 @@
       <div class="pgn-container">
         <h3>Load PGN</h3>
         <div class="pgn-controls">
-          <div class="color-select">
-            <label>Playing as:</label>
-            <select id="player-color">
-              <option value="w">White</option>
-              <option value="b">Black</option>
-            </select>
-          </div>
           <textarea id="pgn-input" placeholder="Paste PGN here..."></textarea>
           <button id="load-pgn-btn">Load PGN</button>
         </div>
