--- a/front_end/index.html
+++ b/front_end/index.html
@@ -43,6 +43,10 @@
       width: 500px;
       max-width: 100%;
       position: relative;
+      touch-action: none;
+      -webkit-touch-callout: none;
+      -webkit-user-select: none;
+      user-select: none;
     }
 
     .game-info {
@@ -166,6 +170,17 @@
       width: 100%;
       margin-bottom: 10px;
       box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+      touch-action: none;
+      -webkit-touch-callout: none;
+      -webkit-user-select: none;
+      user-select: none;
+    }
+
+    #board * {
+      touch-action: none;
+      -webkit-touch-callout: none;
+      -webkit-user-select: none;
+      user-select: none;
     }
 
     .move-arrow {
