added share feature

--- a/front_end/index.html
+++ b/front_end/index.html
@@ -370,6 +370,7 @@
       <div class="status" id="status">White to move</div>
       <div class="action-buttons">
         <button id="new-game-btn">New Game</button>
+        <button id="share-btn">Share Game</button>
         <button id="lichess-analysis-btn">Open Analysis Board</button>
         <button id="player-color">Playing as White</button>
       </div>
