--- a/front_end/index.html
+++ b/front_end/index.html
@@ -4,8 +4,10 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Chess Game</title>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/chessboard-js/1.0.0/chessboard-1.0.0.min.css">
+  <meta name="description" content="Chess Opening Trainer - Learn and practice chess openings">
+  <title>Chess Opening Trainer</title>
+  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="https://unpkg.com/@chrisoakman/chessboardjs@1.0.0/dist/chessboard-1.0.0.min.css">
   <style>
     body {
       font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
@@ -139,12 +141,24 @@
     .video-title {
       font-weight: bold;
       margin-bottom: 4px;
-      color: #2c3e50;
+      color: var(--text-color);
     }
 
     .video-description {
       font-size: 0.9em;
-      color: #666;
+      color: var(--text-secondary);
+    }
+
+    .chess-com-link {
+      font-size: 0.8em;
+      color: var(--primary-color);
+      text-decoration: none;
+      display: inline-block;
+      margin-top: 2px;
+    }
+
+    .chess-com-link:hover {
+      text-decoration: underline;
     }
 
     @media (max-width: 1200px) {
@@ -360,84 +374,77 @@
 </head>
 
 <body>
+  <header>
+    <h1>Chess Opening Trainer</h1>
+  </header>
 
-  <div class="main-content">
+  <main class="main-content">
     <div class="content-wrapper">
-  <div class="container">
-    <div class="board-container">
-      <div id="board"></div>
-      <div id="arrow-layer"></div>
-      <div class="status" id="status">White to move</div>
-      <div class="action-buttons">
-        <button id="new-game-btn">New Game</button>
-        <button id="share-btn">Share Game</button>
-        <button id="lichess-analysis-btn">Open Analysis Board</button>
-        <button id="player-color">Playing as White</button>
-      </div>
-    </div>
-
-    <div class="game-info">
-      <div class="moves-container">
-        <h3>Move History</h3>
-        <div id="moves"></div>
-        <div class="nav-buttons">
-          <button id="start-btn">« Start</button>
-          <button id="prev-btn">‹ Prev</button>
-          <button id="next-btn">Next ›</button>
-          <button id="end-btn">End »</button>
-        </div>
+      <section class="container">
+        <div class="board-container">
+          <div id="board" role="application" aria-label="Chess board"></div>
+          <div id="arrow-layer" aria-hidden="true"></div>
+          <div class="status" id="status" role="status">White to move</div>
+          <div class="action-buttons">
+            <button id="new-game-btn" type="button">New Game</button>
+            <button id="share-btn" type="button">Share Game</button>
+            <button id="lichess-analysis-btn" type="button">Open Analysis Board</button>
+            <button id="player-color" type="button">Playing as White</button>
           </div>
         </div>
-      </div>
 
-      <div class="pgn-container">
-        <h3>Load PGN</h3>
-        <div class="pgn-controls">
-          <textarea id="pgn-input" placeholder="Paste PGN here..."></textarea>
-          <button id="load-pgn-btn">Load PGN</button>
+        <div class="game-info">
+          <div class="moves-container">
+            <h2>Move History</h2>
+            <div id="moves" role="log" aria-live="polite"></div>
+            <div class="nav-buttons">
+              <button id="start-btn" type="button" aria-label="Go to start">« Start</button>
+              <button id="prev-btn" type="button" aria-label="Previous move">‹ Previous</button>
+              <button id="next-btn" type="button" aria-label="Next move">Next ›</button>
+              <button id="end-btn" type="button" aria-label="Go to end">End »</button>
+            </div>
+          </div>
         </div>
-      </div>
+      </section>
+
+      <section class="pgn-container">
+        <h2>Load PGN</h2>
+        <div class="pgn-controls">
+          <textarea id="pgn-input" placeholder="Paste PGN here..." aria-label="PGN input"></textarea>
+          <button id="load-pgn-btn" type="button">Load PGN</button>
+        </div>
+      </section>
     </div>
 
-    <div class="sidebar">
-      <!-- Filter and Sort Section -->
+    <aside class="sidebar">
       <div class="filter-section">
         <div class="series-selection-div">
-          <h3>Series Selection</h3>
-          <select id="series-select">
+          <h2>Series Selection</h2>
+          <select id="series-select" aria-label="Select series">
             <!-- Options will be populated dynamically -->
           </select>
         </div>
 
-        <h3>Sort By</h3>
+        <h2>Sort By</h2>
         <div class="sort-options">
-          <select id="sort-select">
-            <option value="elo-low-high">Elo (low to high)</option>
-            <option value="elo-high-low">Elo (high to low)</option>
-            <!-- <option value="elo-closest">Elo (closest)</option> -->
+          <select id="sort-select" aria-label="Sort videos by">
+            <option value="elo-high-low">Elo (High to Low)</option>
+            <option value="elo-low-high">Elo (Low to High)</option>
+            <option value="elo-closest">Elo (Closest to 1500)</option>
           </select>
         </div>
       </div>
-      <div id="video-list-container">
-        <!-- Example video items -->
-        <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" class="video-item" target="_blank">
-          <img src="https://img.youtube.com/vi/dQw4w9WgXcQ/mqdefault.jpg" alt="Video thumbnail">
-          <div class="video-text">
-            <div class="video-title">Title of the YouTube Video</div>
-            <!-- <div class="video-description">Brief description of the video content</div> -->
-          </div>
-        </a>
-      </div>
-    </div>
+      <div id="video-list-container" role="list"></div>
+    </aside>
+  </main>
+
+  <div class="promotion-modal" id="promotion-modal" role="dialog" aria-label="Choose promotion piece">
+    <div class="promotion-options" id="promotion-options" role="listbox"></div>
   </div>
 
-  <div class="promotion-modal" id="promotion-modal">
-    <div class="promotion-options" id="promotion-options"></div>
-  </div>
-
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+  <script src="https://unpkg.com/@chrisoakman/chessboardjs@1.0.0/dist/chessboard-1.0.0.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/chess.js/0.10.3/chess.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/chessboard-js/1.0.0/chessboard-1.0.0.min.js"></script>
   <script src="script.js"></script>
 </body>
 
