--- a/front_end/index.html
+++ b/front_end/index.html
@@ -4,8 +4,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Chess Opening Trainer - Learn and practice chess openings">
-  <title>Chess Opening Trainer</title>
+  <meta name="description" content="Fan-made chessbrah series explorer">
+  <title>Fan-made chessbrah series explorer</title>
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="https://unpkg.com/@chrisoakman/chessboardjs@1.0.0/dist/chessboard-1.0.0.min.css">
   <style>
@@ -375,7 +375,6 @@
 
 <body>
   <header>
-    <h1>Chess Opening Trainer</h1>
   </header>
 
   <main class="main-content">
