--- a/front_end/index.html
+++ b/front_end/index.html
@@ -438,6 +438,7 @@
       </div>
       <div id="video-list-container" role="list"></div>
     </aside>
+
   </main>
 
   <div class="promotion-modal" id="promotion-modal" role="dialog" aria-label="Choose promotion piece">
@@ -449,6 +450,12 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/chess.js/0.10.3/chess.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/pako/2.1.0/pako.min.js"></script>
   <script src="script.js"></script>
+
+
+  <p>
+      <a href="https://github.com/bobert-io/chessbrah_episode_guide">source code</a>
+      <a href="https://github.com/bobert-io/bobert-io.github.io">github pages</a>
+  </p>
 </body>
 
 </html>
